# easy-finances

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml
.cursor/rules/: clarification-and-confirmations.mdc  docs-structure-and-references.mdc  fx-snapshot-and-idempotency.mdc  project-context-travel-assistant.mdc  prompts-centralization.mdc  python-logging-standards.mdc  runtime-and-deploy.mdc  security-and-privacy.mdc
.github/workflows/: ci.yml  deploy.yml  infra.yml
alembic/: env.py
alembic/versions/: 4cffcdb68f5e_seed_categories_mvp.py  5f504d1e2116_user_and_conversation_setup.py  6e38192d12bc_agent_onboarding_config.py  83971b542463_budget_config.py  a1b2c3d4e5f6_add_agent_routing_to_conversation.py  b0035a0e9246_initial_schema.py  c7d8e9f0a1b2_add_current_budget_and_installments.py  d8e9f0a1b2c3_seed_unexpected_category.py  e1f2a3b4c5d6_add_classification_feedback.py
app/: config.py  database.py  logging_config.py
app/agents/: __init__.py
app/agents/coach_agent/: __init__.py  agent.py  graph.py  mcp_client.py  state.py
app/agents/common/: __init__.py  handoff.py  intents.py  response.py
app/agents/configuration_agent/: __init__.py  agent.py  graph.py  options.py  state.py
app/agents/coordinator/: __init__.py  agent.py  graph.py  router.py  state.py
app/agents/ie_agent/: __init__.py  agent.py  graph.py  state.py
app/api/: __init__.py  deps.py  main.py
app/api/routes/: __init__.py  health.py  webhook.py
app/flows/: __init__.py  constants.py  ivr_processor.py  validators.py
app/integrations/: __init__.py
app/integrations/whatsapp/: __init__.py  message_parser.py  response_formatter.py  twilio_client.py
app/models/: __init__.py  account.py  budget.py  card.py  category.py  classification_feedback.py  conversation.py  expense.py  receipt.py  trip.py  user.py
app/prompts/: __init__.py  coach_agent.py  configuration_agent.py  coordinator.py  expense_extraction.py  sql_generation.py
app/schemas/: extraction.py
app/services/: __init__.py  expense_classifier.py
app/storage/: __init__.py  budget_writer.py  card_writer.py  category_mapper.py  classification_feedback.py  conversation_cache.py  conversation_manager.py  expense_writer.py  object_storage.py  receipt_writer.py  trip_writer.py  user_writer.py
app/tools/: __init__.py  fx_lookup.py
app/tools/extraction/: __init__.py  audio_extractor.py  receipt_parser.py  text_extractor.py
docs/: context.md
docs/plans/: phase-1-ie-agent-and-storage.md
docs/tools/: audio-extractor-usage.md  text-extractor-usage.md
finanzas-mcp-server/: README.md  env.example  pyproject.toml
finanzas-mcp-server/src/: __init__.py  config.py  server.py  sql_validator.py
finanzas-mcp-server/src/services/: __init__.py  database.py  embeddings.py  llm.py
finanzas-mcp-server/src/tools/: __init__.py  execute_sql.py  nl_to_sql.py  schema.py
finanzas-mcp-server/vanna_training/: __init__.py  config.json  train.py
init-scripts/: init-n8n-db.sh
nginx/: nginx.conf
scripts/: finetune_classifier.py
scripts/azure/: backup-to-github.sh  setup-ssl.sh  setup-vm.sh
tests/: conftest.py  test_llamaparse.py
tests-manual/: generate_test_audio.py  test_audio_extractor.py  test_coordinator_agent.py  test_ie_agent.py  test_receipt_parser.py  test_storage_writers.py  test_text_extractor.py  test_vanna_foundation.py  test_whatsapp_e2e.py
tests/fixtures/bill/: README.md
tests/fixtures/golden_datasets/: __init__.py  sql_questions.json
tests/integration/: __init__.py  test_classifier_integration.py  test_coach_agent_e2e.py  test_concurrency.py  test_conversation_flows.py  test_coordinator.py  test_error_scenarios.py  test_ie_agent_e2e.py  test_multi_agent_flows.py  test_webhook_e2e.py
tests/unit/agents/: __init__.py  test_configuration_agent.py  test_coordinator_router.py
tests/unit/coordinator/: test_ivr_integration.py
tests/unit/flows/: __init__.py  test_ivr_budget.py  test_ivr_card.py  test_ivr_processor.py  test_ivr_trip.py  (+1 more)
(+60 files in other folders)
